--- a/html project/condensed.html
+++ b/html project/condensed.html
@@ -55,29 +55,28 @@
                     <h4><a href="#" class="parchment-info">Dragon Warrior</a></h4>
                 </div>
                 <article class="content-main">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, vero! Sint vel voluptatum dignissimos sunt eum facere qui dolor, dolorum ad possimus eos vero, provident quos blanditiis dicta explicabo natus.</p>
-                    <figure>
+                    <figure class="content-figure">
                         <img class="fox"src="./images/fox.png" alt="this is a fox">
-                        <caption>This is master fox</caption>
+                        <figcaption class="content-figcaption">This is master fox</figcaption>
                     </figure>
+                    <h2> Let's Kung Fu! </h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, vero! Sint vel voluptatum dignissimos sunt eum facere qui dolor, dolorum ad possimus eos vero, provident quos blanditiis dicta explicabo natus.</p>
                     <p>Vastness is bearable only through love emerged into consciousness not a sunrise but a galaxyrise emerged into consciousness courage of our questions across the centuries and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
-                    <p>Vastness is bearable only through love emerged into consciousness not a sunrise but a galaxyrise emerged into consciousness courage of our questions across the centuries and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
-                    <p class="breaker">Vastness is bearable only through love emerged into consciousness not a sunrise but a galaxyrise emerged into consciousness courage of our questions across the centuries and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
                     <a href="#" class="content-button">Read the parchment!</a>
                 </article>
             </section>
             <div class="cut-line"></div>
             <section class="content-unit">
                 <article class="content-main">
-                    <h3> Lalalu Tubaralu Estrabalem selah</h3>
+                    <h2> Lalalu Tubaralu Estrabalem selah</h2>
                     <p>Lorem ipsum dolor sit, <a href="#" alt="link to the solar system">amet consectetur</a> adipisicing elit. Enim, vero! Sint vel voluptatum dignissimos sunt eum facere qui dolor, dolorum ad possimus eos vero, provident quos blanditiis dicta explicabo natus.</p>
                 </article>
                 <article class="content-main">
-                    <h2> Lalalu Tubaralu Estrabalem selah</h2>
+                    <h2>Die Elemente</h2>
                     <ul>
-                        <li>Ein</li>
-                        <li>Zwei</li>
-                        <li>Drei</li>
+                        <li class="feuer">Feuer</li>
+                        <li class="wasser">Wasser</li>
+                        <li class="pflanze">Pflanze</li>
                     </ul>
                     <p>Vastness is bearable only through love emerged into consciousness not a sunrise but a galaxyrise emerged into consciousness courage of our questions across the centuries and billions upon billions upon billions upon billions upon billions upon billions upon billions.</p>
                     <a href="#" class="content-button">Read the parchment!</a>
@@ -91,37 +90,37 @@
             <section class="content-unit">
                 <article class="content-main">
                     <table>
-                        <caption>Warriors Tiger Panda Mantis Mono</caption>
+                        <caption>Warriors</caption>
                         <thead>
                             <tr>
                                 <th><!--Diese Zelle wurde absichtlich leer gelassen--> </th>
-                                <th>Fury</th>
-                                <th>Control</th>
-                                <th>Speed</th>
-                                <th>Agility</th>
+                                <th>Attribut</th>
+                                <th>Beherrschung</th>
+                                <th>Element</th>
+                                <th>Geschenk</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th> Attribut </th>
-                                <td>Starke</td>
-                                <td class="chosen">Macht</td>
-                                <td>Genauigkeit</td>
-                                <td>Kreativitat</td>
+                                <th>Panda</th>
+                                <td><span class="table-label">Attribut:</span>Starke</td>
+                                <td class="chosen"><span class="table-label">Element:</span>Pflanze</td>
+                                <td><span class="table-label">Beherrshung:</span>Friede</td>
+                                <td><span class="table-label">Geschenk:</span>Kreativitat</td>
                             </tr>
                             <tr>
-                                <th> Element </th>
-                                <td>Feuer</td>
-                                <td>Wasser</td>
-                                <td>Gras</td>
-                                <td>Holz</td>
+                                <th>Tiger</th>
+                                <td><span class="table-label">Attribut:</span>Geschwindigkeit</td>
+                                <td><span class="table-label">Element:</span>Feuer</td>
+                                <td><span class="table-label">Beherrshung:</span>Zorn</td>
+                                <td><span class="table-label">Geschenk:</span>Wut</td>
                             </tr>
                             <tr>
-                                <th> Laune </th>
-                                <td>Wutend</td>
-                                <td>Ruhig</td>
-                                <td>Kraft</td>
-                                <td>Freude</td>
+                                <th>Affe</th>
+                                <td><span class="table-label">Attribut:</span>Gewandtheit</td>
+                                <td><span class="table-label">Element:</span>Holz</td>
+                                <td><span class="table-label">Beherrshung:</span>Freude</td>
+                                <td><span class="table-label">Geschenk:</span>Verruckheit</td>
                             </tr>
                         </tbody>
                     </table>
@@ -138,20 +137,23 @@
                             <span  id="quiz">Enter your name</span>
                             <input id="warrior-name" type="text">
                         </label>
+                        <button class="buttonA"></button>
                     </form>
-                    <button class="buttonA"></button>
                 </article>
-                <hr class="cut-line-content-2">
             </section>
+            <hr class="cut-line-2">
             <section class="content-unit">
-                <header class="content-header">
+                <div class="content-header">
                     <h1>With float</h1>
-                </header>
+                </div>
                 <article class="content-main">
-                    <h4 class="article-title">Red Sunset</h4>
+                    <h1 class="main-title">Red Sunset</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur dolorum dolores hic laudantium error cumque quo </p>
                     <blockquote><em><p>Being respectful, is a good idea</p></em></blockquote>
-                    <img class="content-img" src="./images/dawn.jpg" alt="This is a red dawn"/>
+                    <figure class="content-figure-2">
+                        <img class="content-img" src="./images/dawn.jpg" alt="This is a red dawn"/>
+                        <figcaption class="content-figcaption-2">Dawn</figcaption>
+                    </figure>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequatur dolorum dolores hic laudantium error cumque quos ratione, necessitatibus id, voluptatibus tenetur. Inventore debitis excepturi incidunt, ut id fugit voluptatibus accusantium!</p>
                     <article class="parchment-conditions">
                         <div class="parchment-header"><h3>Parchment</h3></div>
@@ -175,8 +177,11 @@
             </section>
         </main>
         <footer class="fuss">
-            <img class="fuss-leaf" src="./images/892917.png" alt="peace leaf"/>
-            <img class="fuss-logo" src="./images/yy.png" alt="Den logo von den Fuss"/>
+            <ul class="column-list">
+                <li><h1>KUNG FUSS!</h1></li>
+                <li><img class="fuss-leaf" src="./images/892917.png" alt="peace leaf"/></li>
+                <li><img class="fuss-logo" src="./images/yy.png" alt="Den logo von den Fuss"/></li>
+            </ul>
             <h5>&copy;All rights reserved, 2022</h5>
         </footer>
         <script src="condensed.js"></script>
