--- a/html project/condensed.html
+++ b/html project/condensed.html
@@ -184,6 +184,6 @@
             </ul>
             <h5>&copy;All rights reserved, 2022</h5>
         </footer>
-        <script src="condensed.js"></script>
+        <script src="./script/condensed.js"></script>
     </body>
 </html>
